--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.70.0",
     "@react-three/fiber": "^8.13.0",
     "@react-three/postprocessing": "^2.14.7",
+    "@vercel/analytics": "^1.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
