--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@vercel/analytics": "^1.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "next": "^13.5.6",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
